...
          '发现',
          Color(0xFF8A7BF6),
        ),
        (
          Icons.chat_bubble_outline_rounded,
          Icons.chat_bubble_rounded,
          '消息',
          Color(0xFF68B7F6),
        ),
        (
          Icons.person_outline_rounded,
          Icons.person_rounded,
          '我的',
          Color(0xFF9D82F4),
        ),
      ];

  @override
  Widget build(BuildContext context) {
...
